--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -428,6 +428,7 @@ header{
     position: fixed;
     bottom: 30px;
     right: 30px;
+    -webkit-transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
     transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
     opacity: 0;
     visibility: hidden;
