--- a/public/stylesheets/queries.css
+++ b/public/stylesheets/queries.css
@@ -1,3 +1,7 @@
+@media only screen and (max-width: 2000px) {
+    .main-nav { display: block; }
+}
+
 /* Big tablets to 1200px (widths smaller than the 1140px row */
 
 @media only screen and (max-width: 1200px) {
