--- a/public/stylesheets/queries.css
+++ b/public/stylesheets/queries.css
@@ -1,7 +1,3 @@
-@media only screen and (max-width: 2000px) {
-    .main-nav { display: block; }
-}
-
 /* Big tablets to 1200px (widths smaller than the 1140px row */
 
 @media only screen and (max-width: 1200px) {
@@ -113,6 +109,8 @@
 /* Small phones: from 0 to 480px */
 
 @media only screen and (max-width: 480px) {
-    section {padding: 25px 0;}
-    .contact-form {width: 100%;}
+    section { padding: 25px 0; }
+    .contact-form { width: 100%; }
+
+    .logo { height: 100px; }
 }
