--- a/public/stylesheets/queries.css
+++ b/public/stylesheets/queries.css
@@ -112,5 +112,8 @@
     section { padding: 25px 0; }
     .contact-form { width: 100%; }
 
-    .logo { height: 100px; }
+    .logo { 
+        height: 100px;
+        float: left;
+    }
 }
